; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_configset_get_bool.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_configset_get_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_set = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_configset_get_bool(%struct.config_set* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.config_set*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store %struct.config_set* %0, %struct.config_set** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load %struct.config_set*, %struct.config_set** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @git_configset_get_value(%struct.config_set* %9, i8* %10, i8** %8)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @git_config_bool(i8* %14, i8* %15)
  %17 = load i32*, i32** %7, align 8
  store i32 %16, i32* %17, align 4
  store i32 0, i32* %4, align 4
  br label %19

18:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %19

19:                                               ; preds = %18, %13
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @git_configset_get_value(%struct.config_set*, i8*, i8**) #1

declare dso_local i32 @git_config_bool(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
